--- a/BankingSystem.BLL/BankingSystem.BLL.csproj
+++ b/BankingSystem.BLL/BankingSystem.BLL.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BankingSystem.DAL\BankingSystem.DAL.csproj" />
+    <ProjectReference Include="..\BankingSystem.DTO\BankingSystem.DTO.csproj" />
+  </ItemGroup>
+
 </Project>
