--- a/BankingSystem.BLL/BankingSystem.BLL.csproj
+++ b/BankingSystem.BLL/BankingSystem.BLL.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BankingSystem.DAL\BankingSystem.DAL.csproj" />
     <ProjectReference Include="..\BankingSystem.DTO\BankingSystem.DTO.csproj" />
   </ItemGroup>
