--- a/BankingSystem/BankingSystem.csproj
+++ b/BankingSystem/BankingSystem.csproj
@@ -21,6 +21,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BankingSystem.BLL\BankingSystem.BLL.csproj" />
+    <ProjectReference Include="..\BankingSystem.Common\BankingSystem.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Middleware\" />
   </ItemGroup>
 
 </Project>
